[tool.poetry]
description = "install-jdk allows you to easily install latest Java OpenJDK version. Supports OpenJDK builds from Adoptium (previously AdoptOpenJDK), Corretto, and Zulu. Simplify your Java development with the latest OpenJDK builds."
name = "install-jdk"
version = "1.0.2"
keywords = [
    "Java",
    "OpenJDK",
    "AdoptOpenJDK",
    "Adoptium",
    "Corretto",
    "Zulu",
    "JDK",
    "JRE",
]
authors = ["Jason Snow <jason.snow@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jyksnw/install-jdk"
repository = "https://github.com/jyksnw/install-jdk"
documentation = "https://github.com/jyksnw/install-jdk"
packages = [{ include = "jdk" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.poetry.urls]
Changelog = "https://github.com/jyksnw/install-jdk/releases"

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.2.13"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.0.4"
pre-commit-hooks = "^4.4.0"
darglint = "^1.8.1"
mypy = "^1.0.1"
typeguard = "^2.13.3"
pyupgrade = "^3.3.1"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
